<resources>
    <string name="app_name">Memory Marathon</string>
    <string name="start_button" translatable="false">Start</string>
    <string name="option_button">Options</string>
    <string name="quit_button" translatable="false">Quit</string>
    <string name="levels_button">Levels</string>
    <string name="settings_button">Settings</string>
    <string name="custom_button">Custom</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general" translatable="false">General</string>
    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="numbers_numbers">NUMBERS</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="numbers_time_remaining">TIME REMAINING</string>
    <string name="settings_number_group_title">Size of number group</string>
    <string name="settings_number_group_summary">Actual number size in group: 2</string>
    <string name="settings_number_group_dialogtitle">Set group size</string>
    <string name="settings_number_row_title">Number of groups in row</string>
    <string name="settings_number_row_summary">Actual number of groups in row: 20</string>
    <string name="settings_number_row_dialogtitle">Set number of groups in row</string>
    <string name="settings_number_title">NUMBERS</string>
    <string name="settings_timer_title">TIMER</string>
    <string name="settings_timer_top">Inspection time</string>
    <string name="settings_timer_summary">Actual inspection time: </string>
    <string name="settings_timer_dialogtitle">Set inspection time</string>
    <string name="numbers_button_remember">REMEMBER</string>
    <string name="numbers_remember_done">DONE</string>
    <string name="numbers_fast_mode">QUICK</string>
    <string name="quick_button_done">DONE</string>
    <string name="numbers_remembered_title" translatable="false">Numbers Remembered</string>
    <string name="easy">easy</string>
    <string name="medium" translatable="false">medium</string>
    <string name="hard">hard</string>
    <string name="numbers_remembered_passed"> passed</string>
    <string name="dialog_passed_message1">You have successfuly remembered</string>
    <string name="dialog_passed_message2">numbers in time: </string>
    <string name="dialog_passed_title"> passed</string>
    <string name="text_number">NUMBER</string>
    <string name="button_next">NEXT</string>
    <string name="text_answer">YOUR ANSWER</string>
    <string name="button_menu">MENU</string>
    <string name="button_retry">RETRY</string>
    <string name="numbers_remembered_highest_score">New high score!</string>
    <string name="quick_button_ok">OK</string>
    <string name="quick_level_hs_title">High Score</string>
    <string name="title_activity_tabbed_high_score" translatable="false">TabbedHighScore</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="EXTRA_LEVEL" translatable="false">jimmy.gg.flashingnumbers.LEVEL</string>
    <string name="EXTRA_NUMBERS" translatable="false">jimmy.gg.flashingnumbers.NUMBERS</string>
    <string name="LEVEL_KEY">HIGHEST_LEVEL1</string>
    <string name="EXTRA_TIME">jimmy.gg.flashingnumbers.TIME</string>
    <string name="EXTRA_PAGE">jimmy.gg.flashingnumbers.PAGE</string>
    <string name="settings_group" translatable="false">settings_group</string>
    <string name="settings_row" translatable="false">settings_row</string>
    <string name="settings_timer" translatable="false">settings_timer</string>
    <string name="EXTRA_NUMBERS_COUNT">"jimmy.gg.flashingnumbers.NUMBERS_COUNT"</string>
    <string name="EXTRA_TIME_REMAIN">jimmy.gg.flashingnumbers.TIME_REMAIN</string>
    <string name="default_value_timer">3</string>
    <string name="default_value_numbers">2</string>
    <string name="CHECKBOX" translatable="false">CHECKBOX</string>
    <string name="INFO">INFO</string>
    <string name="button_quick_retry">RETRY</string>
    <string name="button_quick_save">SAVE</string>
    <string name="button_seen">SEEN</string>
    <string name="button_new">NEW</string>
    <string name="high_score">High score</string>
    <string name="main_numbers">Numbers</string>
    <string name="main_words">Words</string>
    <string name="main_images" translatable="false">Images</string>
    <string name="words_activity_title">Words</string>
    <string name="words_activity_dialog" translatable="false">WORDSINFO</string>
    <string name="words_delete_score">Delete score</string>
    <string name="quick_level_settings_title">QUICK LEVEL</string>
    <string name="settings">Settings</string>
    <string name="header_number_settings">Numbers settings</string>
    <string name="header_quick_mode_settings">Quick numbers settings</string>
    <string name="animation">Animation</string>
    <string name="title_activity_main_test" translatable="false">Memory Marathon</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="the_major_memory_system_title">The Major Memory System</string>
    <string name="major_system_howtouse">The system works by converting number sequences into noun, nouns into images, and linking images into sequences. These sequences can be very complex and detailed.

        \n\nThe building blocks of the system are the association of the numbers below with the following consonant sounds:</string>
    <string name="major_system_number"><b>0</b> - s, z, soft-c \n<b>1</b> - d, t ,th \n<b>2</b> - n \n<b>3</b> - m \n<b>4</b> - r \n<b>5</b> - l \n<b>6</b> - j, sh, soft-ch \n<b>7</b> - k \n<b>8</b> - f,v \n<b>9</b> - p,b</string>
    <string name="major_system_how_to_use"><b>How to use</b></string>
    <string name="major_system_example">For example: 23 - n,m = Nemo, 64 - ch, r = chair\nNow you make image of this number - Nemo sitting on chair.</string>
    <string name="wods_memory_system_howtouse">This method is very similar to memory palace.\nWe have a list of words - <b>ball</b>, <b>mobile phone</b>, <b>book</b>.\n\nNow imagine a journey to the school, or somewhere else where you like to going. \nYou have to imagine that word as object with as many details as possible (colors).\nFirst word <b>ball</b> - imagine at start of walk. <b>Mobile phone</b> - imagine at some point in the middle, since this word is in middle of our list <b>book</b> - imagine somewhere in the end of the walk.\nYou can choose your own spots, some interesting places.\n\nOnce you\'ve imagined all the words, you can start go to walk in your head! Now you should see all words if you have done it right.</string>
    <string name="quick_level_graph_title">Quick Level Graph</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="delete_score">delete score</string>
    <string name="high_score_title">High Score</string>
    <string name="delete_all_score">Delete all score</string>
    <string name="delete_all_score_summary">Do you really want to delete all score from quick level?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="levels_title">Levels</string>
    <string name="quick_level_title">Quick Level</string>
    <string name="level_locked">"Level locked, complete "</string>
    <string name="to_unlock">" to unlock."</string>
    <string name="numbers_info_summ">Use arrows to move to another part of number.\n</string>
    <string name="numbers_info_summ1">Change number arrangement in settings like below.\n</string>
    <string name="numbers_info_summ3">for example: 555555 -> 55 55 55</string>
    <string name="number_remember_numlength" translatable="false">numbers length: (</string>
    <string name="number_remember_remembered">"Remembered "</string>
    <string name="failed">" failed"</string>
    <string name="animation_on">display animation: on</string>
    <string name="animation_off">display animation: off</string>
    <string name="animation_title">Animation</string>
    <string name="numbers_size_group">Actual number size in group:</string>
    <string name="numbers_size_row">Actual number of groups in row:</string>
    <string name="actual_inspection_time">"Actual inspection time: "</string>
    <string name="inspection_time_none">Actual inspection time: none</string>
    <string name="animation_offf">display animation: off</string>
    <string name="display_animation_onn">display animation: on</string>
    <string name="animation_tit">Animation</string>
    <string name="test" translatable="false">aaa</string>
    <string name="menu_title" translatable="false">Menu</string>
    <string name="timer">time:</string>
    <string name="memory_technique">Memory techniques</string>
    <string name="retry_menu">retry</string>
    <string name="graph_menu">Graph</string>
    <string name="delete_score_menu">Delete score</string>
    <string name="sort_by_date">sort by date</string>
    <string name="sort_by_score">sort by score</string>
    <string name="number_guess">What was the number?</string>
    <string name="words_lives">"lives: "</string>
    <string name="words_score">score: 0</string>
    <string name="words_seen">seen</string>
    <string name="words_new">new</string>
    <string name="sf_definition">Leave any message you want, if it\'s an issue I will try to fix it. Or should I add something?</string>
    <string name="sf_title">"Title: "</string>
    <string name="sf_message">Message</string>
</resources>