<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <jimmy.gg.flashingnumbers.preferences.CustomPreference android:title="@string/settings_number_title">
        <ListPreference
            android:key="levels_test_g"
            android:title="@string/settings_number_group_title"
            android:summary="@string/settings_number_group_summary"
            android:dialogTitle="@string/settings_number_group_dialogtitle"
            android:entries="@array/array_group"
            android:entryValues="@array/array_group"
            android:defaultValue="2" />
        <ListPreference
            android:key="levels_test_r"
            android:title="@string/settings_number_row_title"
            android:summary="@string/settings_number_row_summary"
            android:dialogTitle="@string/settings_number_row_dialogtitle"
            android:entries="@array/array_row"
            android:entryValues="@array/array_row"
            android:defaultValue="4" />
    </jimmy.gg.flashingnumbers.preferences.CustomPreference>
    <jimmy.gg.flashingnumbers.preferences.CustomPreference android:title="@string/settings_timer_title">
        <ListPreference
            android:key="levels_test_t"
            android:title="@string/settings_timer_top"
            android:summary="@string/settings_timer_summary"
            android:dialogTitle="@string/settings_timer_dialogtitle"
            android:entries="@array/array_time"
            android:entryValues="@array/array_time_id"
            android:defaultValue="3" />
    </jimmy.gg.flashingnumbers.preferences.CustomPreference>
    <jimmy.gg.flashingnumbers.preferences.CustomPreference android:title="@string/animation">
        <CheckBoxPreference
            android:key="levels_test_a"
            android:title="@string/animation"
            android:summaryOn="@string/animation_on"
            android:summaryOff="@string/animation_off"
            android:defaultValue="true" />
    </jimmy.gg.flashingnumbers.preferences.CustomPreference>
</PreferenceScreen>