<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/retry_icon"
        android:title="@string/retry_menu"
        android:icon="@drawable/retry"
        app:showAsAction="always" />
    <item
        android:id="@+id/words_settings"
        app:showAsAction="always"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
    <item
        android:title="@string/high_score"
        android:showAsAction="never"
        android:id="@+id/high_score"
        android:orderInCategory="100" />

    <item
        android:title="@string/memory_technique"
        android:showAsAction="never"
        android:id="@+id/memory_technique_words"
        android:orderInCategory="100" />
</menu>