<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/major_system_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/major_system_how_to_use"
            android:textColor="@color/title_blue" />

        <TextView
            android:id="@+id/major_system_definition"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:text="@string/major_system_howtouse"
            android:layout_below="@+id/major_system_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major_system_number"
            android:layout_marginTop="21dp"
            android:id="@+id/textView2"
            android:layout_below="@+id/major_system_definition"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="15sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/major_system_example"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="21dp"
            android:id="@+id/textView3" />
    </RelativeLayout>
</ScrollView>
