<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_flashing_numbers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jimmy.gg.flashingnumbers.menu.FlashingNumbers">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/levels_button"
        android:layout_marginBottom="0sp"
        android:textSize="24sp"
        android:height="70sp"
        android:onClick="levelsClicked"
        android:theme="@style/MaterialButton"
        android:drawableLeft="@drawable/levels"
        android:id="@+id/button" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:textSize="24sp"
        android:height="70sp"
        android:text="@string/numbers_fast_mode"
        android:theme="@style/MaterialButton"
        android:drawableLeft="@drawable/fast_mode"
        android:onClick="quickClicked"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:textSize="20sp"
        android:height="70sp"
        android:text="@string/settings_button"
        android:onClick="settingsClicked"
        android:layout_marginBottom="70sp"
        android:theme="@style/MaterialButton"
        android:drawableLeft="@drawable/settings"/>

</LinearLayout>
</RelativeLayout>
