<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_send_feedback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jimmy.gg.flashingnumbers.main.MainSendFeedback">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="9pt"
            android:textColor="@color/black"
            android:text="@string/sf_definition"
            android:id="@+id/sf_definition"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11pt"
            android:text="@string/sf_title"
            android:layout_marginTop="15sp"
            android:layout_below="@id/sf_definition"
            android:id="@+id/textView7"
            android:textColor="@color/title_blue"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sf_title"
            android:textColor="@color/numbers_button_color"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_toRightOf="@+id/textView7"
            android:textSize="9pt"
            android:layout_toEndOf="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sf_message"
            android:text="@string/sf_message"
            android:textSize="11pt"
            android:layout_below="@+id/sf_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="6dp"
            android:textColor="@color/title_blue"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_below="@+id/sf_message"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/sf_message_send" />
</RelativeLayout>
